add more tests endpoints
